# bookweald

./: .gitignore  BUGS  README.rst  bookweald.opam  dune-project
docs/: compression-streamed.rst  conf.py  config-files.rst  configuration.rst  extract_cmd.rst  fb2_parse.rst  group.rst  group_cmd.rst  index.rst  index_cmd.rst  indexing.rst  init_cmd.rst  install.rst  organize.rst  programming.rst  quickstart.rst  recoding.rst  reference.rst  schema_init_cmd.rst  tool.rst  validate_cmd.rst  xmlencoding.rst
lib/: alias.ml  alias.mli  art.ml  blacklist.mli  book.ml  book.mli  config.ml  config.mli  db.ml  db.mli  dune  fb2_parse.ml  fb2_parse.mli  fs.ml  fs.mli  input_channel.ml  input_channel.mli  logging.ml  logging.mli  normalize.ml  normalize.mli  organize.ml  person.ml  person.mli  recoding_channel.ml  recoding_channel.mli  unzip.ml  unzip.mli  utils.ml  xml_declaration.ml  xml_declaration.mli
test/: adhoc_test.ml  db_test.ml  dune  fib.ml  postgresql_test.ml  run_tests.ml  test_normalize.ml  test_recoding_channel.ml  test_unzipping_channel.ml  test_xml_declaration.ml
test/fixtures/: 128-255_koi8_utf8.txt  cp1251_simple.fb2  koi8r_simple.fb2  readme.rst
