(executable
 (name run_tests)
 (libraries alcotest ocaml_books)
 (modes byte exe)
 (preprocess (pps ppx_deriving_yojson))
 )
(executable
 (name fib)
 (libraries domainslib)
 (modes exe)
 )
(executable
 (name bancos_index)
 (libraries ocaml_books bancos)
 (modes exe)
 )
(rule
 (alias runtest)                  ; ← dune test will run this
 (action (run ./run_tests.exe)))  ; ← runs your alcotest binary