(executable
 (name run_tests)
 (libraries alcotest bookweald)
 (modes byte exe)
 (preprocess (pps ppx_deriving_yojson)))

(executable
 (name adhoc_test)
 (libraries
   bookweald
 )
 (modes exe)
 )
(executable
 (name db_test)
 (libraries
   bookweald
 )
 (modes exe)
 )
; (executable
;  (name caqti_connect)
;  (libraries
;    lwt
;    caqti
;    caqti-lwt
;    caqti.blocking
;    caqti-lwt.unix)
;  (modes exe)
;  )
; (executable
;  (name bancos_index)
;  (libraries bookweald bancos)
;  (modes exe)
;  )
; (executable
;  (name irmin_index)
;  (libraries irmin)
;  (modes exe)
;  )
(rule
 (alias runtest)                  ; ← dune test will run this
 (action (run ./run_tests.exe)))  ; ← runs your alcotest binary